<resources>
    <string name="app_name">Quiz App</string>
    <string name="question1">The image below shows three layers of the earth,which layer is the hottest?</string>
    <string name="question2">Epoxy resin are used as?</string>
    <string name="question3">which of the following is the most penetrating out of these Beta ray,Alpha ray Gamma ray, X-ray?</string>
    <string name="question4">what kind of waves are used to make and receive cellphone calls?</string>
    <string name="question5">which of the following is used as pencil?</string>
    <string name="question6">Nuclear fussion is caused by what?</string>
    <string name="qusetion7">which is/are important raw materials required in the cement industry?</string>
    <string name="question8">Pick the element that correspond to these two chemical formula H20,H2S207?</string>
    <string name="question9">what are the three types of radioactive element?</string>
    <string name="attempt">Instruction:Attempt all questions.</string>
    <string name="subject">science quiz</string>
</resources>
