<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical"
        tools:context=".MainActivity">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/subject"
            android:gravity="center"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="16dp"
            android:text="@string/attempt"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="Question 1:"
                android:textAllCaps="false"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/question1"
                android:textAllCaps="false"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/layer_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:inputType="textCapWords" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="Question 2:"
                android:textAllCaps="false"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/question2"
                android:textAllCaps="false"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/adhesive_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:inputType="textCapWords" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="Question 3:"
                android:textAllCaps="false"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/question3"
                android:textAllCaps="false"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/rays_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:inputType="textCapWords" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="Question 4:"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/question4"
                android:textSize="20sp" />


            <RadioGroup
                android:id="@+id/receive_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb_radio_wave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:text="Radio waves"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/sound_wave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:text="Sound waves"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/infrared_wave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:text="Infrared waves"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/mobile_wave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:text="Mobile Waves"
                    android:textSize="24sp" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="Question 5:"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/question5"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/pencil_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb_graphite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:text="Graphite"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/rb_silicon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:text="Silicon"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/rb_charcoal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:text="Charcoal"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/rb_phosphorus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:text="Phosphorus"
                    android:textSize="24sp" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="Question 6:"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/question6"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/nuclear_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb_neutron"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:text="Neutron"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/rb_proton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:text="Proton"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/rb_deuteron"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:text="Deuteron"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/rb_electron"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:text="Electron"
                    android:textSize="24sp" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="Question 7:"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/qusetion7"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/cb_clay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="Clay"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/cb_limestone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="Limestone"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/cb_stone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="Stone"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/cb_gypsum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="Gypsum"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="Question 8:"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/question8"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/cb_water"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="Water"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/cb_sulphuric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="Sulphuric Acid"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/cb_peroxide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="Hydrogen Peroxide"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/cb_oleum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="Oleum"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="Question 9:"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/question9"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/cb_beta_ray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="Beta Ray"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/cb_gamma_ray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="Gamma Ray"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/cb_omega_ray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="Omega Ray"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/cb_alpha_ray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="Alpha Ray"
                android:textSize="24sp" />

            <Button
                android:id="@+id/submit_button"
                android:background="@drawable/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="checkResult"
                android:padding="16dp"
                android:text="Submit" />
        </LinearLayout>
    </LinearLayout>


</ScrollView>